branding splash screen now works